--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -59,7 +59,7 @@ table tbody tr {
 	@apply fixed top-0 right-0 z-30 h-full w-full  bg-gradient-to-b from-black to-transparent;
 
 	.mobile-menu__overlay {
-		@apply container mx-auto lg:max-w-[1104px];
+		@apply container mx-auto flex h-full flex-col justify-start gap-2  lg:max-w-[1104px];
 	}
 
 	.mobile-menu__wrapper {
@@ -68,7 +68,10 @@ table tbody tr {
 
 	ul {
 		@apply mx-auto grid grid-cols-1  gap-2 overflow-auto px-3 sm:grid-cols-2;
-		max-height: calc(100vh - 185px);
+
+		/**
+		 max-height: calc(100vh - 185px);
+		  */
 	}
 
 	li a {
